[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "blacktex"
authors = [{name = "Nico Schlömer", email = "nico.schloemer@gmail.com"}]
description = "Clean up your LaTeX files"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Text Editors :: Text Processing",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: Markup",
  "Topic :: Text Processing :: Markup :: LaTeX",
  "Topic :: Utilities",
]
dynamic = ["version"]
requires-python = ">=3.6"

[project.urls]
Code = "https://github.com/nschloe/blacktex"
Issues = "https://github.com/nschloe/blacktex/issues"
Funding = "https://github.com/sponsors/nschloe"

[project.scripts]
tiptop = "blacktex.cli:main"

[tool.isort]
profile = "black"
