[metadata]
name = blacktex
version = 0.2.1
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Cleans up your LaTeX files
url = https://github.com/nschloe/blacktex
project_urls =
    Code=https://github.com/nschloe/blacktex
    Issues=https://github.com/nschloe/blacktex/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Text Editors :: Text Processing
    Topic :: Text Processing
    Topic :: Text Processing :: Markup
    Topic :: Text Processing :: Markup :: LaTeX
    Topic :: Utilities

[options]
packages = find:
# importlib_metadata can be removed when we support Python 3.8+ only
install_requires =
    importlib_metadata
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel

[options.extras_require]
all = matplotlib
png = matplotlib

[options.entry_points]
console_scripts =
    blacktex = blacktex.cli:main
