[metadata]
name = blacktex
version = 0.3.3
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Cleans up your LaTeX files
url = https://github.com/nschloe/blacktex
project_urls =
    Code=https://github.com/nschloe/blacktex
    Issues=https://github.com/nschloe/blacktex/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Text Editors :: Text Processing
    Topic :: Text Processing
    Topic :: Text Processing :: Markup
    Topic :: Text Processing :: Markup :: LaTeX
    Topic :: Utilities
keywords =
    latex
    linting

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
python_requires = >=3.6

[options.entry_points]
console_scripts =
    blacktex = blacktex.cli:main
